More cosmetic fixes to Clippings Manager (part of issue #265)

--- a/wx-src/pages/clippingsMgr.css
+++ b/wx-src/pages/clippingsMgr.css
@@ -184,6 +184,7 @@ input[type="checkbox"] + label {
 }
 
 .toolbar-button:active {
+    border: 1px solid transparent !important;
     border-radius: 2px;
     background-color: var(--color-toolbarbtn-active-bkgd);
 }
@@ -652,7 +653,11 @@ ul.fancytree-container {
 }
 
 #source-url-bar > #source-url-deck button:hover {
-    background-color: var(--color-details-pane-btn-hover-bkgd);
+    background-color: var(--color-btn-hover-bkgd);
+}
+
+#source-url-bar > #source-url-deck button:active {
+    background-color: var(--color-btn-active-bkgd);
 }
 
 #source-url-bar > #source-url-deck > #src-url-normal-mode > #clipping-src-url {
@@ -873,7 +878,6 @@ ul.fancytree-container {
 #reload-sync-fldr-msgbox,
 #move-sync-fldr-msgbox,
 #delete-sync-fldr-msgbox,
-#mini-help-dlg,
 #show-only-synced-items-reminder,
 #generic-msg-box {
     top: 64px;
@@ -1045,11 +1049,11 @@ ul.fancytree-container {
 }
 
 #import-dlg #import-clippings-file-upload-btn:hover {
-    background-color: var(--color-btn-bkgd-hover);
+    background-color: var(--color-btn-hover-bkgd);
 }
 
 #import-dlg #import-clippings-file-upload-btn:active {
-    background-color: var(--color-btn-bkgd-active);
+    background-color: var(--color-btn-active-bkgd);
     border: 1px solid #858585;
 }
 
@@ -1188,7 +1192,7 @@ ul.fancytree-container {
 #mini-help-dlg {
     --width: 450px;
     --height: 312px;
-    top: 24px;
+    top: 20px;
 }
 
 #shortcut-list-dlg .hlp-hdr,
